third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/eq/union.rs
#[derive(derive_more::Eq)]
union IntOrFloat {
    i: u32,
}

impl PartialEq for IntOrFloat {
    fn eq(&self, _: &Self) -> bool {
        unimplemented!()
    }
}

fn main() {}
